fix findings, set up release job